--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "DaData": {
-    "BaseUrl": "https://cleaner.dadata.ru/api/v1",
-    "ApiKey": "4f82ec887cf1f4acd3dc552e480e78c50e944299",
-    "Secret": "438ec306eb2d85afa6421c7c082416ab60aec726"
+    "BaseUrl": "https://cleaner.dadata.ru/api/v1/",
+    "ApiKey": "Token 709fca410278e593818f7516edc4c6ca4119d0ec",
+    "Secret": "4e3051757b83ba80d304e33e45940e4e388a0fa2"
   },
   "Logging": {
     "LogLevel": {
